#501 Refactor test files: Add new lines for readability and consistency in GamificationServiceTest and ImpactDashboardServiceTest